--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://npmcdn.com/react-bootstrap-table/dist/react-bootstrap-table-all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </link>
-
+  
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -50,4 +50,93 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap');
+</style>
+<style>
+  body{/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#242b48+0,363a64+100 */
+  background: #242b48; /* Old browsers */
+  background: -moz-linear-gradient(top,  #242b48 0%, #363a64 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #242b48 0%,#363a64 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #242b48 0%,#363a64 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#242b48', endColorstr='#363a64',GradientType=0 ); /* IE6-9 */
+  
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+}
+
+.navbar {
+  background-color: transparent !important;
+}
+
+.navbar h3{
+  text-indent: -9999px;
+}
+
+.navbar-nav .nav-link {
+    padding-right: 0;
+    padding-left: 0;
+    font-size: 1.388em;
+}
+
+.navbar-nav .nav-link {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #000;
+}
+
+.navbar-nav .nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fdfdfd;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.navbar-nav .nav-link:hover:before,
+.navbar-nav .nav-link.active:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+footer{background-color: #242b49 !important}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {  
+ 
+}
+ 
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+@media (min-width: 768px) {  
+  .navbar-nav .nav-link {
+    text-align: center;
+  }
+}
+ 
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+ 
+}
+ 
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {  
+    
+}
+
+</style>
+
+
 </html>
